--- a/.github/workflows/autopost.yml
+++ b/.github/workflows/autopost.yml
@@ -3,8 +3,8 @@ name: AutoPost Facebook Reels via Telegram Input
 
 on:
   schedule:
-    - cron: "0 */6 * * *" # Jalankan setiap 6 jam. Ubah menjadi "0 */24 * * *" untuk 1 hari sekali.
-  workflow_dispatch: # Memungkinkan trigger manual dari GitHub UI
+    - cron: "0 */6 * * *"
+  workflow_dispatch:
 
 jobs:
   autopost:
@@ -15,11 +15,18 @@ jobs:
       FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
       TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} # <-- BARU
+      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+
+    # --- PERUBAHAN DI SINI ---
+    - name: Clean previous offset file (for debugging only)
+      run: rm -f last_update_offset.txt
+      # Hapus langkah ini setelah bot berfungsi seperti yang diharapkan
+      # agar bot tidak terus-menerus memproses ulang pesan lama
+    # --- AKHIR PERUBAHAN ---
 
     - name: Set up Python
       uses: actions/setup-python@v5
