--- a/.github/workflows/autopost.yml
+++ b/.github/workflows/autopost.yml
@@ -3,8 +3,8 @@ name: AutoPost Facebook Reels via Telegram Input
 
 on:
   schedule:
-    - cron: "0 */6 * * *"
-  workflow_dispatch:
+    - cron: "0 */6 * * *" # Jalankan setiap 6 jam.
+  workflow_dispatch: # Memungkinkan trigger manual
 
 jobs:
   autopost:
@@ -21,12 +21,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # --- PERUBAHAN DI SINI ---
-    - name: Clean previous offset file (for debugging only)
-      run: rm -f last_update_offset.txt
-      # Hapus langkah ini setelah bot berfungsi seperti yang diharapkan
-      # agar bot tidak terus-menerus memproses ulang pesan lama
-    # --- AKHIR PERUBAHAN ---
+    # --- Hapus langkah debugging ini jika sudah tidak diperlukan ---
+    # - name: Clean previous offset file (for debugging only)
+    #   run: rm -f last_update_offset.txt
+    # --- Akhir hapus langkah debugging ---
 
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -42,6 +40,37 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    # --- BARU DAN PENTING: Cache history files ---
+    - name: Cache posted history and Telegram offset
+      id: cache-history # Tambahkan ID untuk referensi cache hit/miss
+      uses: actions/cache@v4
+      with:
+        path: |
+          posted.json
+          last_update_offset.txt
+        key: ${{ runner.os }}-autopost-history-v1 # Kunci konsisten untuk versi cache (ubah v1 ke v2 dst jika Anda mereset cache secara manual)
+        restore-keys: |
+          ${{ runner.os }}-autopost-history- # Fallback jika kunci tidak ditemukan
+
+    - name: Initialize history files if cache miss
+      # Jalankan langkah ini hanya jika cache miss (pertama kali atau cache dihapus)
+      if: steps.cache-history.outputs.cache-hit != 'true'
+      run: |
+        echo "Cache untuk file histori tidak ditemukan. Menginisialisasi file baru."
+        echo "[]" > posted.json
+        echo "0" > last_update_offset.txt
+      shell: bash
+
+    - name: Debug: Verify history files content (before script run)
+      # Tampilkan konten file untuk debugging
+      run: |
+        echo "Content of posted.json (before script run):"
+        cat posted.json
+        echo "Content of last_update_offset.txt (before script run):"
+        cat last_update_offset.txt
+      shell: bash
+    # --- AKHIR Cache history files ---
 
     - name: Run AutoPost Script
       run: python main.py
