--- a/.github/workflows/autopost.yml
+++ b/.github/workflows/autopost.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python # Mengatur lingkungan Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10' # Menentukan versi Python yang akan digunakan
+        python-version: '3.9' # Menentukan versi Python yang akan digunakan
 
     - name: Install dependencies # Menginstal dependensi Python dari requirements.txt
       run: |
@@ -32,6 +32,7 @@ jobs:
       with:
         name: autopost-data # Nama artifact yang sama dengan yang diunggah
         path: . # Mengunduh ke direktori root repositori
+      continue-on-error: true # Tambahkan ini agar workflow tetap berjalan meskipun download gagal
 
     - name: Run AutoPost Script # Menjalankan skrip utama
       env: # Mengatur variabel lingkungan dari GitHub Secrets
@@ -51,3 +52,4 @@ jobs:
           posted_media.json
           last_update_offset.txt
         retention-days: 7 # Opsional: Berapa lama artifact akan disimpan (default 90 hari)
+      continue-on-error: true # Tambahkan ini agar workflow tetap berjalan meskipun upload gagal
