--- a/.github/workflows/autopost.yml
+++ b/.github/workflows/autopost.yml
@@ -13,8 +13,6 @@ jobs:
     - name: Checkout repository # Mengambil kode dari repositori GitHub
       uses: actions/checkout@v4
       with:
-        # Penting: Menggunakan personal access token untuk izin menulis ke repositori
-        # Ganti YOUR_GITHUB_TOKEN_SECRET dengan nama secret GitHub Anda
         token: ${{ secrets.REPO_ACCESS_TOKEN }} 
 
     - name: Set up Python # Mengatur lingkungan Python
@@ -31,6 +29,17 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y ffmpeg
 
+    - name: Ensure persistence files exist # Pastikan file persistensi ada di awal
+      run: |
+        touch posted_media.json # Buat file kosong jika belum ada
+        touch last_update_offset.txt # Buat file kosong jika belum ada
+        touch pending_media.json # Pastikan pending_media.json juga ada
+
+    - name: Debug: List files before script # Menampilkan daftar file sebelum main.py berjalan
+      run: |
+        echo "Files before main.py runs:"
+        ls -la
+
     - name: Run AutoPost Script # Menjalankan skrip utama
       env: # Mengatur variabel lingkungan dari GitHub Secrets
         FB_ACCESS_TOKEN: ${{ secrets.FB_ACCESS_TOKEN }}
@@ -41,14 +50,17 @@ jobs:
       run: |
         python main.py
 
+    - name: Debug: List files after script # Menampilkan daftar file setelah main.py selesai
+      run: |
+        echo "Files after main.py runs:"
+        ls -la
+
     - name: Commit and Push changes # Meng-commit dan me-push file persistensi ke repositori
       run: |
         git config user.name "GitHub Actions Bot"
         git config user.email "actions@github.com"
-        git add posted_media.json last_update_offset.txt
-        # '|| true' digunakan agar langkah ini tidak gagal jika tidak ada perubahan untuk di-commit
-        git commit -m "AutoPost: Update posted media and offset" || true 
+        git add posted_media.json last_update_offset.txt pending_media.json
+        git commit -m "AutoPost: Update posted media, offset, and pending queue" || true 
         git push
       env:
-        # Pastikan REPO_ACCESS_TOKEN adalah Personal Access Token dengan izin 'repo'
         GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }} 
