--- a/.github/workflows/autopost.yml
+++ b/.github/workflows/autopost.yml
@@ -50,7 +50,7 @@ jobs:
       run: |
         python main.py
 
-    - name: Debug: List files after script # Menampilkan daftar file setelah main.py selesai
+    - name: List files after script # Menampilkan daftar file setelah main.py selesai
       run: |
         echo "Files after main.py runs:"
         ls -la
