--- a/.github/workflows/autopost.yml
+++ b/.github/workflows/autopost.yml
@@ -37,7 +37,7 @@ jobs:
         touch last_update_offset.txt # Buat file kosong jika belum ada
         touch pending_media.json # Pastikan pending_media.json juga ada
 
-    - name: Debug: List files before script # Menampilkan daftar file sebelum main.py berjalan
+    - name: List files before script # Menampilkan daftar file sebelum main.py berjalan
       run: |
         echo "Files before main.py runs:"
         ls -la
@@ -52,7 +52,7 @@ jobs:
       run: |
         python main.py
 
-    - name: Debug: List files after script # Menampilkan daftar file setelah main.py selesai
+    - name: List files after script # Menampilkan daftar file setelah main.py selesai
       run: |
         echo "Files after main.py runs:"
         ls -la
